# OpenEnv-SRE

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agent/: llm_agent.py  parser.py  prompts.py
env/: __init__.py  constants.py  environment.py  grader.py  models.py  simulator.py  tasks.py
scripts/: validate.sh
server/: __init__.py  app.py  routes.py  schemas.py
tests/: test_env.py  test_grader.py
ui/: index.html  package-lock.json  tailwind.config.ts
ui/src/: api.js  index.css
ui/src/components/dashboard/: ActionTimeline.tsx  ActionsPanel.tsx  AlertsPanel.tsx  DashboardHeader.tsx  LogsPanel.tsx  MetricsPanel.tsx  RewardPanel.tsx  TaskSelector.tsx
ui/src/lib/: simulator.ts
ui/src/pages/: Index.tsx
