[project]
name = "openenv-sre"
version = "0.1.0"
description = "AI-powered SRE simulation environment"
authors = [{ name = "Piyush Patil" }]

dependencies = [
  "fastapi",
  "uvicorn",
  "requests",
  "pydantic",
  "openai",
  "openenv>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"